Refactor Project structure